# azure-cost-exporter

./: .gitignore  Dockerfile  README.md  exporter_config.yaml  format.sh  lint.sh  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: python-app.yml
deployment/k8s/: deployment.yaml
src/azure_cost_exporter/: cli.py  exporter.py
tests/: test_cli.py
